@@ -1,5 +1,10 @@
 2006-01-09  Don Scorgie  <dscorgie@cvs.gnome.org>
 
+	* src/yelp-window.c: 
+	Make find menu items insensitive when not available
+	
+2006-01-09  Don Scorgie  <dscorgie@cvs.gnome.org>
+
 	* src/yelp-base.c: 
 	Actually commit cleanup in file
 
